Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37299

An incorrect d3dcompiler may be found when deploying 64-bit apps

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.3.0
    • 5.3.0 Alpha
    • None
    • Windows 8.1 x64
    • 7ae7dccfaf03204f466ac41348d2ecf720d0f065 (qttools, stable, 11.3.2014, 5.3)

      When deploying 64-bit applications and WINSDK_DIR is not set, windeployqt will find the 32-bit DLL from C:\Windows and deploy it.

      Some suggestions to remedy this:

      • Check the bitness and simply don't deploy if it's wrong
      • Check the bitness and look harder for the correct DLL if it's wrong
      • Check the Qt bin directory for a suitable D3D compiler (it will be there in release packages)
      • Check the actual Windows SDK path, either from the registry or a hard-coded value

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            andrew.knight Andrew Knight
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes