windeployqt: Deploy d3dcompiler from system only if word size matches.

Look in the bin-directory of the Qt SDK first, then check system
and make sure the word size matches.

Task-number: QTBUG-37299

Change-Id: Ib1941c79cbc931aa67090bc08a5f7c1798e2a245
Reviewed-by: Oliver Wolff <oliver.wolff@digia.com>
Reviewed-by: Andrew Knight <andrew.knight@digia.com>